2004-05-06  David Ayers  <d.ayers@inode.at>

	* INSTALL: Update prerequisites.
	* GSWAdaptors/common/common.make: Whitespace update.
	* GSWeb.framework/GSWDefaultAdaptor.m: Ditto.
	
2004-04-22  S.J. Chun <chunsj@embian.com>

	* GSWExtensions.framework/GSWKeyValueConditional.m
	([GSWKeyValueConditional condition]): Declare all variables at top
	of block to be able to compile with gcc 2.95.
	* GSWeb.framework/GSWBaseParser.m
	(_ParserDebugLogBuffer):Ditto.
	* GSWeb.framework/GSWDisplayGroup.m
	([GSWDisplayGroup _deleteObjects]),
	([GSWDisplayGroup displayBatchContainingSelectedObject]),
	([GSWDisplayGroup setDefaultStringMatchFormat:]),
	([GSWDisplayGroup _setUpForNewDataSource]): Ditto.
	* GSWeb.framework/GSWHTMLDynamicElement.m
	([GSWHTMLDynamicElement	computeActionStringWithActionClassAssociation:
	directActionNameAssociation:pathQueryDictionaryAssociation:
	otherPathQueryAssociations:inContext:]): Ditto.
	* GSWeb.framework/GSWHTMLRawParser.m
	([GSWHTMLRawParser tagPropertiesForType:betweenIndex:andIndex:]),
	([GSWHTMLRawParser parseHTML]): Ditto.
	* GSWeb.framework/GSWRequest.m
	([GSWRequest valuesFromHeaderString:], [GSWRequest initWithString:]),
	([GSWRequest cookies]): Ditto.
	* GSWeb.framework/GSWStatisticsStore.m
	([GSWStatisticsStore _sessionTerminating:]): Ditto.
	* GSWeb.framework/GSWTemporaryElement.m
	([GSWTemporaryElement _elementWithDeclaration:name:properties:
	template:languages:]): Ditto.


2004-04-20  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWDisplayGroup.m:
	([GSWDisplayGroup init]): Set fetchesOnLoad to YES by default.
	Reported by S.J. Chun <chunsj@embian.com>.

2004-04-14  David Ayers  <d.ayers@inode.at>

	* gsweb.make.in: Remove GSANTLR dependency.
	* GSWExtensions.framework/Makefile.preamble: Ditto.
	* GSWExtensionsGSW.framework/Makefile.preamble: Ditto.
	
	* GSWeb.framework/Makefile.preamble.in: Move AUX_LIBS to the
	bottom so that the linker on Darwin can deal with the static
	library.
